# useful-scripts

./: .gitignore  CLAUDE.md  LICENSE  README.md
batch/: jsonbeauty.bat
c/codecave/: CMakeLists.txt  README.md  cave.c
c/shellcode_loader/: CMakeLists.txt  README.md  main.c
python/: .gitignore  ApplyDiff.py  README.md  asm_emit.py  html_entities.py  markdown_render.py  mdcomdec.py  parse_vcf.py  preprocess.py  qslideshow.htm  qslideshow.js  qslideshow.py  setup.cfg  setup.py  src_to_llm_context.py
python/eval_cpp/: .gitignore  CMakeLists.txt  README.md  eval_cpp.md  eval_cpp.py  eval_cpp.templ.cpp
python/qslideshow/: __init__.py  qslideshow.py
python/qslideshow/web/: slideshow.js
python/useful_libs/: README.md  pyproject.toml
python/useful_libs/tests/: test_mdparser.py
python/useful_libs/useful_libs/: mdparser.py
python/useful_libs/useful_libs/files/: find.pyi
python/useful_libs/useful_libs/markdown/: heading_parser.pyi
tritonenv/: README.md  triton.env  tritonenv.bat
tritonenv/cmake/: CMakeLists.txt  main.cpp
upyscripts/: README.md  TESTING.md  pyproject.toml  requirements.txt  setup.py
upyscripts/tests/: test_imgsxs.py  test_mksctxt.py  test_qslideshow_actions.py  test_qslideshow_config.py  test_qslideshow_gestures.py  test_qslideshow_hotkeys.py  test_qslideshow_playwright_basic.py  test_qslideshow_playwright_timer.py
upyscripts/upyscripts/: __init__.py  applydiff.py  asm_emit.py  dlcalc.py  file_upload.py  ghview.py  help_command.py  imgsxs.py  jsontree.py  jsonutils.py  markdown_render.py  mdcomdec.py  mksctxt.py  parse_vcf.py  pdf3img.py  preprocess.py  pyast.py  src_to_llm_context.py
upyscripts/upyscripts/dll2proj/: .gitignore  CMakeLists.templ.cmake  README.md  __init__.py  dll2proj.py  main.templ.cpp  mylib.templ.cpp  mylib.templ.h  prep-cmake.bat
upyscripts/upyscripts/lib/files/: find.py
upyscripts/upyscripts/lib/markdown/: heading_parser.py
upyscripts/upyscripts/qslideshow/: __init__.py  __main__.py  actions.py  cli.py  config.py  core.py  gestures.py  gui.py  history.py  hotkeys.py  repeat_modes.py  trash.py  webserver.py
upyscripts/upyscripts/qslideshow/test_tools/: test_tool0.sh  test_tool1.py
upyscripts/upyscripts/qslideshow/web/: app.manifest  index.html  login.html  slideshow.js
upyscripts/upyscripts/tests/: TEST_IMAGES_README.md  generate_test_images.py  test_find_latest.py  test_mdparser.py  test_qslideshow_web.py
