[metadata]
name = useful_scripts
version = 0.1.0

[options]
packages = find:
install_requires = 
    markdown2

[options.entry_points]
console_scripts =
    ApplyDiff = ApplyDiff:main
    asm_emit = asm_emit:main
    html_entities = html_entities:main
    mdcomdec = mdcomdec:main
    parse_vcf = parse_vcf:main
    markdown_render = markdown_render:main
    # preprocess = preprocess:main
