[metadata]
name = useful_scripts
version = 0.1.0

[options]
packages = find:
install_requires = 
    markdown2

[options.entry_points]
console_scripts =
    ApplyDiff = ApplyDiff:main
    asm_emit = asm_emit:main
    dll2proj = dll2proj.dll2proj:main
    eval_cpp = eval_cpp.eval_cpp:main
    file_upload = file_upload:main
    html_entities = html_entities:main
    jsontree = jsontree:main
    markdown_render = markdown_render:main
    mdcomdec = mdcomdec:main
    parse_vcf = parse_vcf:main
    preprocess = preprocess:main
    pyast = pyast:main
    qslideshow = qslideshow.qslideshow:main
    src_to_llm_context = src_to_llm_context:main
